# pyTorchMinistLearn

./: README.md
OpenCVMinist4Android/: settings.gradle
OpenCVMinist4Android/app/: build.gradle
OpenCVMinist4Android/app/src/androidTest/java/dem/vaccae/opencvminist4android/: ExampleInstrumentedTest.kt
OpenCVMinist4Android/app/src/main/: AndroidManifest.xml
OpenCVMinist4Android/app/src/main/cpp/: CMakeLists.txt  dnnUtil.cpp  dnnUtil.h  imgUtil.cpp  imgUtil.h  native-lib.cpp
OpenCVMinist4Android/app/src/main/java/dem/vaccae/opencvminist4android/: MainActivity.kt  MinistResult.kt  OpenCVJNI.kt  SignatureView.kt
OpenCVMinist4Android/app/src/main/res/layout/: activity_main.xml
OpenCVMinist4Android/app/src/main/res/raw/: resnet.onnx
OpenCVMinist4Android/app/src/main/res/values/: strings.xml  themes.xml
OpenCVMinist4Android/app/src/main/res/values-night/: themes.xml
OpenCVMinist4Android/app/src/test/java/dem/vaccae/opencvminist4android/: ExampleUnitTest.kt
OpenCVMinist4Android/gradle/wrapper/: gradle-wrapper.properties
OpenCVMinistDNN/: OpenCVMinistDNN.sln
OpenCVMinistDNN/OpenCVMinistDNN/: OpenCVMinistDNN.vcxproj  main.cpp
torchminist/: Conv2dNet.onnx  Conv2dNet.pt  GoogleNet.onnx  GoogleNet.pt  LinearNet.onnx  LinearNet.pt  ModelConv2d.py  ModelGoogleNet.py  ModelLinearNet.py  ModelResNet.py  ResNet.pt  myResNet.pt  train.py  trainModel.py  trainmydata.py  traintoonnx.py
